syntax = "proto3";
package pto;

message c_login {
  string ver = 1;
  int64 uid = 2;
}

message s_login {
  string ver = 1;
  string account = 2;
  string passwd = 3;
}

message s_login_req {
  int64 uid = 1;
}
